--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,15 @@ cryptography==2.3.1
 Flask==1.0.2
 Flask-MySQL==1.4.0
 Flask-MySQLdb==0.2.0
+gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mysqlclient==1.3.13
 passlib==1.7.1
 pycparser==2.18
+PyMySQL==0.9.2
 six==1.11.0
 Werkzeug==0.14.1
 WTForms==2.2.1
