--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,13 @@ env:
 language: python
 python:
   - "3.6"
-    # command to install dependencies
+cache: pip
+services:
+  - postgresql
 install:
   - pip3 install -r requirements.txt
-    # command to run tests
 before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  - psql -c 'create database test_db;' -U postgres
 script:
-  - python3 test.py
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-
+  - python -m unittest test.py 
 
