--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache: pip
 services:
   - postgresql
 install:
-  - pip3 install -r requirements.txt
+  - pip3 install requirements.txt
 before_script:
   - psql -c 'create database test_db;' -U postgres
 script:
