--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
 before_script:
   - psql -c 'create database test_db;' -U postgres
 script:
-  - python -m unittest test.py 
+  - python test.py 
 
