--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ install:
 before_script:
   - psql -c 'create database test_db;' -U postgres
 script:
-  - python -m unittest test.py -v
-
+  - python test.py --cov=app/app.py -v 
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - coveralls 
+after_success:
+  - coveralls
