--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-asn1crypto==0.24.0
-cffi==1.11.5
-click==6.7
-cryptography==2.3.1
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+coverage==4.0.3
+coveralls==1.5.1
+docopt==0.6.2
 Flask==1.0.2
-Flask-MySQL==1.4.0
-Flask-MySQLdb==0.2.0
-gunicorn==19.9.0
 idna==2.7
-itsdangerous==0.24
+ItsDangerous==1.0.0
 Jinja2==2.10
+linecache2==1.0.0
 MarkupSafe==1.0
-mysqlclient==1.3.13
 passlib==1.7.1
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
-pycparser==2.18
-PyMySQL==0.9.2
+python-coveralls==2.9.1
+PyYAML==3.13
+requests==2.20.0
 six==1.11.0
+traceback2==1.4.0
+unittest2==1.1.0
+urllib3==1.24
 Werkzeug==0.14.1
 WTForms==2.2.1
