--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ services:
 install:
   - pip3 install -r requirements.txt
 before_script:
+  - cp env.example .env
   - psql -c 'create database test_db;' -U postgres
 script:
   - python3 test.py
-  - py.test coveralls/tests.py --doctest-modules --pep8 coveralls -v --cov coveralls --cov-report term-missing
   - python test.py --cov=app/app.py -v 
 after_script:
+  - coveralls
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 after_success:
   - coveralls
