--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ source articles/bin/activate
 
 export SECRET_KEY="mDH*Y&7PTYUP^y7yPVyXH"
 
-export TEST_DATABASE_URL="host=localhost dbname=test_db user=postgres password=postgres port=5432"
+export TEST_DATABASE_URL="dbname=test_db user=postgres password=postgres host=localhost port=5432"
 
 export APP_SET="development"
 
