--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: python
 python:
-  - "3.6"
+ - "3.6"
 cache: pip
 services:
-  - postgresql
+ - postgresql
 install:
-  - pip3 install -r requirements.txt
+ - pip install -r requirements.txt
 before_script:
-  - cp env.example .env
-  - psql -c 'create database test_db;' -U postgres
+ - cp env.example .env
+ - psql -c 'create database test_db;' -U postgres
 script:
   - python3 test.py
   - python test.py --cov=app/app.py -v 
 after_script:
-  - coveralls
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+ - coveralls
+ - codeclimate-test-reporter
 after_success:
-  - coveralls
+ - coveralls
