--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
  - psql -c 'create database test_db;' -U postgres
 script:
   - python3 test.py
-  - python test.py --cov=app/app.py -v 
+  - python test.py
 after_script:
  - coveralls
 after_success:
