--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+atomicwrites==1.2.1
+attrs==18.2.0
 certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
-coverage==4.0.3
+coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
@@ -9,9 +11,14 @@ idna==2.7
 Jinja2==2.10
 linecache2==1.0.0
 MarkupSafe==1.0
+more-itertools==4.3.0
 passlib==1.7.1
+pluggy==0.8.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+py==1.7.0
+pytest==4.0.0
+pytest-cov==2.6.0
 python-coveralls==2.9.1
 PyYAML==3.13
 requests==2.20.0
